Add tks-tests to pki-ci.yml

--- a/.github/workflows/pki-ci.yml
+++ b/.github/workflows/pki-ci.yml
@@ -32,6 +32,12 @@ jobs:
     with:
       db-image: ${{ needs.call-build-workflow.outputs.db-image }}
 
+  tks-tests:
+    needs: build
+    uses: ./.github/workflows/tks-tests.yml
+    with:
+      db-image: ${{ needs.call-build-workflow.outputs.db-image }}
+
   tools-tests:
     needs: build
     uses: ./.github/workflows/tools-tests.yml
